<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.app.atfnews.view.LoginActivity">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/fblogin_margin_bottom"
        android:layout_marginTop="@dimen/fblogin_margin_top"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/scrolling_background"
        android:layout_width="@dimen/bg_layout_width"
        android:layout_height="@dimen/bg_layout_height"
        android:background="@color/cardview_dark_background"
        android:contentDescription="@string/atf_news_background_picture"
        android:scaleType="centerCrop"
        android:scaleX="@dimen/start_scale"
        android:scaleY="@dimen/start_scale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/first"
        android:layout_width="@dimen/fb_btn_layout_width"
        android:layout_height="@dimen/fb_btn_layout_height"
        android:layout_marginStart="@dimen/fb_btn_margin_start"
        android:background="@drawable/com_facebook_favicon_blue"
        android:contentDescription="@string/facebook_login_image"
        android:elevation="@dimen/btn_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" tools:targetApi="lollipop" />

    <Button
        android:id="@+id/second"
        android:layout_width="@dimen/google_btn_layout_width"
        android:layout_height="@dimen/google_btn_layout_height"
        android:layout_marginStart="@dimen/fb_btn_margin_start"
        android:elevation="@dimen/btn_elevation"
        android:background="@drawable/googleg_standard_color_18"
        android:contentDescription="@string/google_signin_image"
        android:paddingStart="@dimen/google_padding_start"
        android:paddingEnd="@dimen/google_padding_start"
        app:layout_constraintBottom_toBottomOf="@+id/first"
        app:layout_constraintLeft_toRightOf="@+id/first"
        app:layout_constraintTop_toTopOf="@+id/first"
        app:layout_constraintVertical_bias="1.0" tools:targetApi="lollipop" />




    <EditText
        android:id="@+id/email_login_text"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:autofillHints=""
        android:background="@color/white_transparent"
        android:fontFamily="@string/font_family_condensed"
        android:hint="@string/enter_your_email_here"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="@dimen/edittext_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/second"
        app:layout_constraintVertical_bias="0.39"
        tools:targetApi="o" />

    <Button
        android:id="@+id/login_with_email"
        android:layout_width="@dimen/emailbtn_width"
        android:layout_height="@dimen/emailbtn_height"
        android:layout_marginStart="@dimen/emailbtn_marginstart"
        android:background="@color/browser_actions_title_color"
        android:contentDescription="@string/login_with_email"
        android:elevation="@dimen/btn_elevation"
        android:text="@string/email_login"
        android:textColor="@color/color_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/email_login_text"
        app:layout_constraintTop_toTopOf="@+id/email_login_text"
        app:layout_constraintVertical_bias="0.387"
        tools:targetApi="lollipop" />

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/progressbar_marginstart"
        android:layout_marginBottom="@dimen/progressbar_marginbottom"
        app:layout_constraintBottom_toBottomOf="@+id/login_with_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logo"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="@dimen/bg_layout_height"
        android:layout_height="@dimen/fb_btn_layout_height"
        android:layout_marginTop="@dimen/editText_margintop"
        android:focusable="@string/text_focus"
        android:focusableInTouchMode="@string/text_focus"
        android:fontFamily="@string/font_family_medium"
        android:src="@drawable/log"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/color_logo"
        android:textColorHighlight="@color/color_logo"
        android:textColorHint="@color/color_logo"
        android:textSize="@dimen/edittext_height"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:targetApi="jelly_bean" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_margin" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />



</android.support.constraint.ConstraintLayout>