<resources>
    <string name="app_name">ATF News</string>
</resources>
