...
        android:layout_height="@dimen/favsection_layout_height"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/favsection_margin_end"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_fav_news_icon_inactive"
            android:layout_width="@dimen/favsection_layout_height"
            android:layout_height="@dimen/favsection_layout_height"
            android:layout_marginStart="@dimen/favicon_margin_start"
            android:layout_marginTop="@dimen/newsitem_margin_start"
            android:layout_marginBottom="@dimen/favicon_margin_bottom"
            android:contentDescription="@string/remove_favorite"
...
        android:layout_height="@dimen/favsection_layout_height"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/favsection_margin_end"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_fav_news_icon_active"
            android:layout_width="@dimen/favsection_layout_height"
            android:layout_height="@dimen/favsection_layout_height"
            android:layout_marginStart="@dimen/favicon_margin_start"
            android:layout_marginTop="@dimen/newsitem_margin_start"
            android:layout_marginBottom="@dimen/favicon_margin_bottom"
            android:contentDescription="@string/add_favorite"
...
