<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="@string/text_focus"
        android:layout_marginTop="@dimen/button_margintop"
        android:background="@color/browser_actions_title_color"
        android:padding="@dimen/text_padding"
        android:text="@string/reset_to_default_news_location"
        android:textColor="@color/color_logo"
        android:textSize="@dimen/text_size" />

    <ImageView

        android:id="@+id/profileImage"
        android:layout_width="@dimen/logout_image_width"
        android:layout_height="@dimen/logout_image_height"
        android:layout_below="@+id/btnReset"
        android:layout_alignStart="@+id/btnReset"
        android:layout_marginStart="@dimen/logout_image_start"
        android:layout_marginTop="@dimen/logout_image_width"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/profileimage" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="@dimen/button_logout_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReset"
        android:layout_centerHorizontal="@string/text_focus"
        android:layout_marginStart="@dimen/button_logout_start"
        android:layout_marginTop="@dimen/button_logout_margintop"
        android:layout_toEndOf="@+id/profileImage"
        android:background="@color/browser_actions_title_color"
        android:padding="@dimen/text_padding"
        android:text="@string/logout"
        android:textSize="@dimen/edittext_textsize" />

</RelativeLayout>
